third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/pin_data/unexpected_item.stderr
error: `#[pin_data]` can only be applied to struct, enum and union definitions
 --> tests/ui/compile-fail/pin_data/unexpected_item.rs:4:1
  |
4 | fn foo() {}
  | ^^^^^^^^^^^
